Fixed spacing throughout the app.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background-color: #282c34;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  width: 48em;
+  max-width: 47em;
 }
 
 img {
